Reserva page finished

--- a/login.html
+++ b/login.html
@@ -45,7 +45,7 @@
     </header>
 
     <section>
-        <div id="fieldset">
+        <div id="login-fieldsetId" class="form-fieldset">
             <div class="mdc-form-field">
                 <div class="mdc-text-field">
                     <input type="text" id="prontuario-id" class="mdc-text-field__input" aria-controls="prontuario-helper-text" required minlength="7">
@@ -62,7 +62,7 @@
                     <div class="mdc-line-ripple"></div>
                 </div>
             </div>
-            <div id="buttons">
+            <div id="login-buttonsId">
                 <button class="mdc-button mdc-button--raised dark-ripple">Login</button>
             </div>
         </div>
