--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<html lang="pt-br">
+<html class="grey-section-html"lang="pt-br">
 
 <head>
     <meta charset="utf-8">
